@@ -16,12 +16,14 @@ Michael R. Crusoe is the current release maker. This is his checklist.
 
         wget -N https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py
         wget -N https://raw.github.com/warner/python-versioneer/master/versioneer.py
+
         git diff ez_setup.py
         
         git add ez_setup.py
         git commit -m "new version of ez_setup.py"
         # or
         git checkout -- ez_setup.py
+
         git diff versioneer.py
         
         git add versioneer.py
@@ -53,6 +55,7 @@ Michael R. Crusoe is the current release maker. This is his checklist.
         virtualenv testenv1
         virtualenv testenv2
         virtualenv testenv3
+        virtualenv testenv4
         # Does the tag work?
         
         cd testenv1
@@ -83,29 +86,35 @@ Michael R. Crusoe is the current release maker. This is his checklist.
         cd khmer*
         make dist
         make test
-        
-        cd ..
 
 #. Publish the new release on the testing PyPI server::
 
-        python setup.py register --repository https://testpypi.python.org/pypi
+        python setup.py register --repository test
 
    Change your PyPI credentials as documented in
    https://wiki.python.org/moin/TestPyPI::
 
-        python setup.py sdist upload -r https://testpypi.python.org/pypi
+        python setup.py sdist upload -r test
 
    Test the PyPI release in a new virtualenv::
 
-        pip install -i https://testpypi.python.org/pypi khmer
+        cd ../../testenv4
+        source bin/activate
+        pip install --allow-external argparse argparse screed
+        pip install -i https://testpypi.python.org/pypi --pre --no-clean khmer
+        normalize-by-median.py --version 2>&1 | awk ' { print $2 } '
+        cd build/khmer
+        make test
 
-#. Publish the new release on PyPI (requires an authorized account).::
+#. Create the final tag and publish the new release on PyPI (requires an authorized account).::
 
-	python setup.py register sdist upload
-
-#. Create the final tag and publish it to github.::
-
+        cd ../../../khmer
         git tag v${new_version}
+        python setup.py register sdist upload
+
+#. Delete the release candidate tag and push the tag updates to github.::
+
+        git tag -d v${new_version}-rc1
         git push git@github.com:ged-lab/khmer.git
         git push --tags git@github.com:ged-lab/khmer.git
 
